--- a/Views/Contacto/GetAll.cshtml
+++ b/Views/Contacto/GetAll.cshtml
@@ -1,7 +1,45 @@
-﻿
+﻿@model List<ContactoModel>;
 @{
     ViewData["Title"] = "GetAll";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>GetAll</h1>
+<div class="card col-8">
+    <div class="card-header">
+        <h1>All Contacts</h1>
+    </div>
+
+    <div class="card-body">
+        <a asp-action="Save" asp-controller="Contacto">Crea Nuevo Contacto</a>
+        <table class="table table-dark table-striped-columns">
+            <thead>
+                <tr>
+                    <th>Nombre</th>
+                    <th>Telefono</th>
+                    <th>Correo</th>
+                    <th>Clave</th>
+                    <th>Acciones</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>@item.Nombre</td>
+                        <td>@item.Telefono</td>
+                        <td>@item.Correo</td>
+                        <td>@item.Clave</td>
+                        <td>
+                            <a class="btn btn-warning btn-sm" asp-action="Edit" asp-controller="Contacto"
+                           asp-route-idContacto="@item.IdContacto">Editar</a>
+                            <a class="btn btn-danger btn-sm" asp-action="Delete" asp-controller="Contacto"
+                           asp-route-idContacto="@item.IdContacto">Eliminar</a>
+                        </td>
+                    </tr>
+                }
+
+            </tbody>
+        </table>
+    </div>
+</div>
 
