--- a/Views/Contacto/GetAll.cshtml
+++ b/Views/Contacto/GetAll.cshtml
@@ -10,7 +10,7 @@
     </div>
 
     <div class="card-body">
-        <a asp-action="Save" asp-controller="Contacto">Crea Nuevo Contacto</a>
+        <a asp-action="Save" asp-controller="Contacto" class="btn btn-success mb-3"><i class="bi bi-plus-circle"></i> Crea Nuevo Contacto</a>
         <table class="table table-dark table-striped-columns">
             <thead>
                 <tr>
@@ -31,9 +31,9 @@
                         <td>@item.Clave</td>
                         <td>
                             <a class="btn btn-warning btn-sm" asp-action="Edit" asp-controller="Contacto"
-                           asp-route-idContacto="@item.IdContacto">Editar</a>
+                           asp-route-idContacto="@item.IdContacto"><i class="bi bi-pencil"></i> Editar</a>
                             <a class="btn btn-danger btn-sm" asp-action="Delete" asp-controller="Contacto"
-                           asp-route-idContacto="@item.IdContacto">Eliminar</a>
+                           asp-route-idContacto="@item.IdContacto"><i class="bi bi-trash"></i> Eliminar</a>
                         </td>
                     </tr>
                 }
