--- a/Views/Contacto/Save.cshtml
+++ b/Views/Contacto/Save.cshtml
@@ -35,8 +35,8 @@
             </div>
 
             <div class="col-md-4 mb-3">
-                <button type="submit" class="btn btn-primary mb-3">Guardar</button>
-                <a asp-controller="Contacto" asp-action="GetAll">Volver a la lista</a>
+                <button type="submit" class="btn btn-success mb-3"><i class="bi bi-check"></i> Guardar</button>
+                <a asp-controller="Contacto" class="btn btn-primary btn-sm" asp-action="GetAll"><i class="bi bi-arrow-left"></i> Volver a la lista</a>
             </div>
 
         </form>
